--- a/Rapport/AG41-Belbachir_Brunet.tex
+++ b/Rapport/AG41-Belbachir_Brunet.tex
@@ -388,9 +388,9 @@ tshp010-03.txt & 1951.8313355932821 & 0.079s \\
 tshp010-04.txt & 2114.3288184684357 & 0.888s \\
 tshp010-05.txt & 2866.751823637155 & 1.253s \\
 tshp020-01.txt & 4573.544241371602 & stopp\'e au bout de 20 min \\
-tshp020-02.txt & 7128.861258575862 & stopp\'e au bout de 20 min \\
-tshp020-03.txt & 9662.086844423093 & stopp\'e au bout de 20 min \\
-tshp020-04.txt & & arrêté au bout de 20 min \\
+tshp020-02.txt & 7128.861258575862 & stopp\'e au bout de 35 min \\
+tshp020-03.txt & 9662.086844423093 & stopp\'e au bout de 60 min \\
+tshp020-04.txt & 11159.946168444236 & arrêté au bout de 20 min \\
 tshp020-05.txt & & \\
 tshp050-01.txt & & \\
 tshp050-02.txt & & \\
